# TImeshift-BTRFS-Sync

./: .gitignore  COMMENTED_CODE_MAP.md  CONFIG_AND_CLI_AUDIT.md  INSTALL.md  LICENSE  README.md  VERSIONING.md  config.  config.example.toml  pyproject.toml  ts-btrfs.spec
scripts/: build_pyinstaller.py
sudoers/: source-minimal.example
systemd/: ts-btrfs-sync.service  ts-btrfs-sync.timer
timeshift_btrfs_sync/: __init__.py  __main__.py  btrfs.py  cli.py  commands.py  config.py  destroy.py  lock.py  log.py  mail.py  maintenance.py  metadata.py  models.py  mqtt.py  notify.py  payload_stats.py  preflight.py  remote_index.py  retention.py  source.py  ssh.py  state.py  sync.py  timeshift.py
timeshift_btrfs_sync/data/: config.example.toml
tools/: pyinstaller_entry.py
