[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "timeshift-btrfs-sync"
version = "0.2.4"
description = "Destination-pull Btrfs send/receive sync for Timeshift snapshots with SSH, mbuffer, and Btrfs compression options and split logging"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "timeshift-btrfs-sync contributors" }]
keywords = ["btrfs", "timeshift", "backup", "snapshot", "ssh", "mbuffer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Archiving :: Backup",
]

[project.scripts]
ts-btrfs = "timeshift_btrfs_sync.cli:main"

[tool.setuptools]
packages = ["timeshift_btrfs_sync"]
