[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "timeshift-btrfs-sync"
version = "0.1.22"
description = "Btrfs send/receive sync for Timeshift snapshots using SSH pull or local source mode, with mbuffer, split logging, notifications, and optional PyInstaller executable builds"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "timeshift-btrfs-sync contributors" }]
keywords = ["btrfs", "timeshift", "backup", "snapshot", "ssh", "mbuffer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Archiving :: Backup",
]

[project.scripts]
ts-btrfs = "timeshift_btrfs_sync.cli:main"

[tool.setuptools]
packages = ["timeshift_btrfs_sync"]

[tool.setuptools.package-data]
timeshift_btrfs_sync = ["data/config.example.toml"]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=1.6"]
pyinstaller = ["pyinstaller>=6.0"]
